--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,17 @@
 /* base styles*/ 
 
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+
+.section-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1220px;
+    margin: 0 auto;
 }
 
 /*typography*/
@@ -188,3 +198,48 @@ select{
     line-height: 32px;
     color: #4A4C53;     
 }
+
+/*header*/
+
+header{
+    padding: 43px 0;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+}
+
+.menu, .buttons{
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+.menu li a{
+    padding: 8px 17px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #B8BECD;
+}
+
+.menu li a:hover{
+    color: #80848f;
+}
+
+.menu li a.active{
+    font-weight: 500;
+    color: #202336;
+}
+
+.buttons li button {
+    min-width: 132px;
+    padding: 0 36px;
+    margin-left: 18px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 42px;
+}
+
