--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1220px;
+    max-width: 1340px;
     margin: 0 auto;
+    padding: 0 60px;
 }
 
 /*typography*/
