--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
     --text-color:#7D7987;
     --quote-color: #000000;
     --footer-color: #848484;
+    --fon-color: #FFFFFF;
 }
 
 /* base styles*/ 
@@ -29,7 +30,7 @@
     align-items: center;
     max-width: 1340px;
     margin: 0 auto;
-   padding: 0 60px;
+    padding: 0 60px;
 }
 
 /*typography*/
@@ -111,7 +112,7 @@ cite{
     font-family: 'Inter';
     font-weight: 700;
     font-size: 22px;
-    line-height: 48px;
+    line-height: 38px;
     font-style: normal;
     color: #000000;
 }
@@ -131,7 +132,7 @@ button, .button, input[type=button], input[type=submit]{
     padding: 0 38px;
     border: 1px solid #FB8F1D;
     border-radius: 8px;
-    background: #FB8F1D;
+    background-color: #FB8F1D;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
@@ -201,14 +202,39 @@ a:visited {
     color: #db7a13;
 }
 
-.{
-    position: relative;
-    display: block;
-    width: 40px;
-    height: 40px;
+.slick-arrow {
+    width: 9px;
+    min-width: 0;
+    height: 9px;
+    padding: 18px;
     border: 2px solid #000000;
     border-radius: 50%;
+    background-image: url(../img/arrow-button.svg);
+    background-color: #FFFFFF;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    font-size: 0;
+    z-index: 1;
 }
+
+.slick-arrow:hover {
+    background-color: #FFFFFF;
+    border-color: #000000;
+}
+
+/* .slick-arrow::after { 
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: block;
+    width: 132px;
+    height: 60px;
+    border-radius: 16px 0px 0px 0px;;
+    background-color: #FFFFFF;
+    z-index: ;
+}*/
+
 
 /*form*/
 
@@ -445,10 +471,7 @@ form{
     justify-items: stretch;
     margin: 46px 49px 0 50px;
 }
-
-.destination li{
-    
-}
+ 
 .destination figure{
     position: relative;
     width: 100%;
@@ -545,15 +568,160 @@ form{
 /*testimonials*/
 
 .testimonials{
-    padding-top: 124px;
-    padding-bottom: 89px;
+    padding-top: 112px;
+    padding-bottom: 142px;
 }
 
 .testimonials .section-container {
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
 }
 
+.testimonials h2{
+    margin-left: 50px;
+}
+
+.testimonials .plus {
+    position: absolute;
+    bottom: -13px;
+    right: 577px;
+}
+
+.testimonials .big-circle {
+    position: absolute;
+    top: 93px;
+    right: 194px;
+    z-index: -1;
+}
+
+.testimonials .mini-circle {
+    position: absolute;
+    width: 22px;
+    top: 298px;
+    left: -35px;
+}
+
 .testimonials-slider{
+    position: relative;
     max-width: 100%;
+}
+
+.slick-initialized .slick-slide.slide{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 59px;
+    margin-right: 152px;
+    margin-left: 49px;
+}
+
+.text-slider{
+    position: relative;
+    margin-top: 83px;
+}
+
+blockquote{
+    margin-top: 30px;
+    margin-right: 150px;
+}
+
+cite{
+    display: block;
+    margin-top: 40px;
+    width: 200px;
+}
+
+.slide .stars{
+    display: inline;
+    margin-right: 11px;
+}
+
+.slide .reviewer {
+    position: relative;
+    border-radius: 14px;
+}
+   
+.slick-prev {
+    position: absolute;
+    transform: rotate(180deg);
+    bottom: 0;
+    right: 214px;
+}
+.slick-next{
+    position: absolute;
+    bottom: 0;
+    right: 152px;
+}
+
+/* Trending stories */
+
+.trending-stories{
+    padding-top: 143px;
+    padding-bottom: 271px;
+}
+
+.trending-stories .section-container{
+    position: relative;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.trending-stories .title-wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 65px;
+    margin-bottom: 46px;
+}
+
+.stories{
+    display: grid;
+    grid-template-columns: repeat(4, 262px);
+    grid-column-gap: 24px;
+    list-style: none;
+    justify-items: stretch;
+    margin: 0 50px;
+}
+
+.story-wrapper{
+    position: relative;
+    display: grid;
+    grid-template-rows: 231px 82px 105px 28px;
+}
+
+.story-wrapper img{
+    border-radius: 8px 8px 0 0;
+}
+
+.story-wrapper .h4{
+    background-color: var(--fon-color);
+    padding-top: 13px;
+    padding-right: 5px;
+}
+
+.story-wrapper .story {
+    background-color: var(--fon-color);
+    padding-top: 5px;
+    padding-right: 12px;
+} 
+
+.trending-stories .plus{
+    position: absolute;
+    width: 20px;
+    top: -57px;
+    left: 515px;
+}
+        
+.trending-stories .circle {
+    position: absolute;
+    width: 20px;
+    top: 368px;
+    left: 13px;
+}
+
+.trending-stories .circle-2 {
+    position: absolute;
+    width: 20px;
+    bottom: -75px;
+    right: 470px;
 }
