--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,8 @@ button:hover, .button:hover, input[type=button]:hover, input[type=submit]:hover{
     border-color: #f99934;
     background-color:#f99934;
     color: #FFFFFF;
+    transform: scale(1.1);
+    transition-duration: 0.8s;
 }
 
 button.transparent, .button.transparent, input[type=button].transparent, input[type=submit].transparent{
@@ -210,7 +212,7 @@ a:visited {
     border: 2px solid #000000;
     border-radius: 50%;
     background-image: url(../img/arrow-button.svg);
-    background-color: #FFFFFF;
+    background-color: var(--fon-color);
     background-position: 50%;
     background-repeat: no-repeat;
     font-size: 0;
@@ -218,7 +220,7 @@ a:visited {
 }
 
 .slick-arrow:hover {
-    background-color: #FFFFFF;
+    background-color: var(--fon-color);
     border-color: #000000;
 }
 
@@ -349,12 +351,36 @@ form{
     padding-left: 117px;
 }
 
+.explore {
+    margin-top: 17px;
+    min-width: 179px;
+}
+
+.text-and-form-wrapp .section-container {
+    margin-left: 60px;
+}
+
 .form-and-image .circle{
     position: absolute;
     top: 50%;
     left: -50px;
     width: 26px;
     height: auto;
+    
+    animation-name: circle;
+    animation-iteration-count: infinite;
+    animation-duration: 1.5s;
+    animation-direction: alternate;
+}
+
+@keyframes circle {
+    0% {
+        width: 26px;
+    }
+
+    100% {
+        width: 30px;
+    }
 }
 
 .form-and-image .plus{
@@ -364,6 +390,21 @@ form{
     width: auto;
     height: 20px;
     transform: rotate(-8deg);
+
+    animation-name: plus;
+    animation-iteration-count: infinite;
+    animation-duration: 1.5s;
+    animation-direction: alternate;
+}
+
+@keyframes plus{
+    0% {
+        height: 20px;
+    }
+
+    100% {
+        height: 24px;
+    }
 }
 
 .form-and-image .mini-circle{
@@ -372,14 +413,21 @@ form{
     bottom: 17px;
     width: 20px;
     height: auto;
+
+    animation-name: mini-circle;
+    animation-iteration-count: infinite;
+    animation-duration: 1.5s;
+    animation-direction: alternate;
 }
 
-.explore {
-    margin-top: 17px;
-    min-width: 179px;
-}
-.text-and-form-wrapp .section-container{
-    margin-left: 60px;
+@keyframes mini-circle{
+    0%{
+        width: 20px;
+    }
+
+    100%{
+        width: 24px;
+    }
 }
         
 
@@ -651,6 +699,10 @@ cite{
     bottom: 0;
     right: 214px;
 }
+.slick-prev:hover {
+    transform: scale(1.1) rotate(180deg);
+}
+
 .slick-next{
     position: absolute;
     bottom: 0;
