--- a/css/index.css
+++ b/css/index.css
@@ -145,10 +145,9 @@ button, .button, input[type=button], input[type=submit]{
 }
 
 button:hover, .button:hover, input[type=button]:hover, input[type=submit]:hover{
-    border-color: #f99934;
-    background-color:#f99934;
+    border-color: #f4a654;
+    background-color:#f4a654;
     color: #FFFFFF;
-    transform: scale(1.1);
     transition-duration: 0.8s;
 }
 
@@ -197,7 +196,8 @@ a.view-all::after {
 }
 
 a.view-all:hover::after{
-   padding-right: 15px;
+   padding-right: 23px;
+    transition-duration: 0.5s;
 }
 
 a:visited {
@@ -515,11 +515,12 @@ form{
 .destination img{
     position: relative;
     width:  100%;
-    border-radius: 8px;
+    border-radius: 8px;   
 }
 
 .destination img:hover {
-    box-shadow: 5px 3px 8px var(--footer-color);
+    transition: box-shadow 0.7s ease-in-out;
+    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
 }
 
 .destination figcaption{
@@ -704,7 +705,7 @@ cite{
     right: 214px;
 }
 .slick-prev:hover {
-    transform: scale(1.1) rotate(180deg);
+    transform: rotate(180deg);
 }
 
 .slick-next{
@@ -721,7 +722,7 @@ cite{
 
 .trending-stories{
     padding-top: 143px;
-    padding-bottom: 271px;
+    padding-bottom: 173px;
 }
 
 .trending-stories .section-container{
@@ -754,7 +755,8 @@ cite{
 }
 
 .img-story:hover {
-    box-shadow: 5px -3px 8px var(--footer-color);
+    transition: box-shadow 0.7s ease-in-out;
+    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
 }
 
  .img-story img { 
@@ -797,4 +799,100 @@ cite{
     width: 20px;
     bottom: 23px;
     right: 470px;
+}
+
+
+/*footer*/
+
+footer{
+    padding-top: 70px;
+    padding-bottom: 33px;
+    background-color: #F9F9FB;
+
+}
+
+footer .section-container {
+    flex-direction: column;
+    align-items: stretch;
+    font-family: var(--basic-font);
+    color:var(--footer-color);
+}
+
+footer ul {
+    list-style: none;
+    
+}
+
+.footer-wrapper{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 77px;
+}
+
+.footer-wrapper::after {
+    content: '';
+    position: absolute;
+    display: block;
+    bottom: 0;
+    width: 1219px;
+    height: 0.6px;
+    background-color: #C4C4C4;
+}
+
+.footer-wrapper nav{
+    display: flex;
+}
+.footer-wrapper ul{
+    min-width: 240px;
+}
+
+
+.logo-text {
+    max-width: 358px;
+    margin-top: 8px;
+}
+
+.logo-text p{
+    margin-top: 17px;
+    padding-right: 10px;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.logo-text .rights{
+    font-size: 17px;
+    margin-top: 53px;
+}
+
+.footer-wrapper a{
+    color: var(--footer-color);
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 38px;
+}
+
+.footer-wrapper h4{
+    font-family: var(--basic-font);
+    line-height: 60px;
+}
+
+.shop{
+    margin-left: 33px;
+}
+
+.interests{
+    margin-left: 47px;
+    margin-right: -79px;
+}
+
+.social-networks{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-right: 64px;
+}
+
+.social-networks li{
+    margin: 0 17px;
 }
