--- a/css/index.css
+++ b/css/index.css
@@ -515,10 +515,12 @@ form{
 .destination img{
     position: relative;
     width:  100%;
-    border-radius: 8px;   
+    border-radius: 8px; 
+    /* transition: box-shadow 0.7s ease-in-out; 
+    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);*/
 }
 
-.destination img:hover {
+.destination img:hover { 
     transition: box-shadow 0.7s ease-in-out;
     box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
 }
@@ -741,42 +743,42 @@ cite{
 
 .stories{
     display: grid;
-    grid-template-columns: repeat(4, 262px);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 24px;
     list-style: none;
     justify-items: stretch;
     margin: 0 50px;
 }
 
+.stories li { 
+    display: block;
+    border-radius: 8px;
+    
+}
+/* transition: box-shadow 0.3s ease-in-out; 
+   box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4); */
 .img-story{
     display: block;
-    width: 261px;
-    height: 330px;
+    height: 230px;
+    object-fit: cover;
 }
 
-.img-story:hover {
-    transition: box-shadow 0.7s ease-in-out;
-    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
-}
-
- .img-story img { 
+.img-story img{
     border-radius: 8px 8px 0 0;
 }
+
 
 .story-wrapper{
     position: relative;
     display: block;
     background-color: var(--fon-color);
-    width: 261px;
-    width: 262px;
-    bottom: 99px;
     padding-top: 13px;
 }
 
 .story-wrapper .story {
     background-color: var(--fon-color);
     padding-top: 13px;
-    padding-right: 12px;
+    /* padding-right: 12px; */
     padding-bottom: 23px;
 } 
 
