--- a/css/index.css
+++ b/css/index.css
@@ -142,13 +142,14 @@ button, .button, input[type=button], input[type=submit]{
     text-align: center;
     color: #FFFFFF;
     cursor: pointer;
+    transition-duration: 0.3s;
 }
 
 button:hover, .button:hover, input[type=button]:hover, input[type=submit]:hover{
     border-color: #f4a654;
     background-color:#f4a654;
     color: #FFFFFF;
-    transition-duration: 0.8s;
+    transition-duration: 0.3s;
 }
 
 button.transparent, .button.transparent, input[type=button].transparent, input[type=submit].transparent{
@@ -400,10 +401,12 @@ form{
 @keyframes plus{
     0% {
         height: 20px;
+        transform: rotate(-8deg);
     }
 
     100% {
         height: 24px;
+        transform: rotate(-25deg);
     }
 }
 
@@ -516,12 +519,11 @@ form{
     position: relative;
     width:  100%;
     border-radius: 8px; 
-    /* transition: box-shadow 0.7s ease-in-out; 
-    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);*/
+    transition-duration: 0.3s;
 }
 
 .destination img:hover { 
-    transition: box-shadow 0.7s ease-in-out;
+    transition: box-shadow 0.3s ease-in-out;
     box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
 }
 
@@ -532,8 +534,15 @@ form{
     min-width: 120px;
     padding-top: 11px;
     padding-right: 20px;
-    border-radius: 0px 6px 0px 0px;
+    border-radius: 0px 6px 0px 6px;
     background-color: #FFFFFF;
+    transition-duration: 0.3s;
+}
+
+.destination figcaption:hover {
+    left: 5px;
+    bottom: 9px;
+    transition-duration: 0.3s;
 }
 
 .featured-destination .plus{
@@ -724,7 +733,7 @@ cite{
 
 .trending-stories{
     padding-top: 143px;
-    padding-bottom: 173px;
+    padding-bottom: 271px;
 }
 
 .trending-stories .section-container{
@@ -744,43 +753,48 @@ cite{
 .stories{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 24px;
+    grid-column-gap: 26px;
     list-style: none;
     justify-items: stretch;
     margin: 0 50px;
 }
-
-.stories li { 
-    display: block;
-    border-radius: 8px;
-    
-}
-/* transition: box-shadow 0.3s ease-in-out; 
-   box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4); */
+ 
 .img-story{
     display: block;
-    height: 230px;
+    height: 231px;
+    width: 100%;
     object-fit: cover;
+    border-radius: 8px 8px 0 0;
 }
 
 .img-story img{
     border-radius: 8px 8px 0 0;
 }
 
-
 .story-wrapper{
     position: relative;
     display: block;
     background-color: var(--fon-color);
     padding-top: 13px;
+    border-radius: 0 0 8px 8px;
 }
 
 .story-wrapper .story {
     background-color: var(--fon-color);
     padding-top: 13px;
-    /* padding-right: 12px; */
     padding-bottom: 23px;
 } 
+
+.stories li {
+    display: block;
+    border-radius:  8px;
+    transition-duration: 0.3s;
+}
+
+.stories li:hover {
+    transition: box-shadow 0.3s ease-in-out;
+    box-shadow: 8px -5px 15px 1px rgba(0, 0, 0, 0.4);
+}
 
 .trending-stories .plus{
     position: absolute;
@@ -799,7 +813,7 @@ cite{
 .trending-stories .circle-2 {
     position: absolute;
     width: 20px;
-    bottom: 23px;
+    bottom: -75px;
     right: 470px;
 }
 
@@ -897,4 +911,10 @@ footer ul {
 
 .social-networks li{
     margin: 0 17px;
+    transition: 0.2s ease-in-out;
+}
+
+.social-networks li:hover{
+    opacity: 0.5;
+    transition: 0.2s ease-in-out;
 }
