--- a/css/index.css
+++ b/css/index.css
@@ -181,12 +181,19 @@ a.view-all {
     line-height: 60px;
 }
 
+svg{
+    transform: translateX(100%);
+    fill:#FB8F1D;
+}
+
+svg:hover{
+    transform: translateX(200%);
+    fill:#c26d13;
+}
 a.view-all:hover{
-    padding-left: 15px;
     transition-duration: 0.5s;
     color: #c26d13;
 }
-
  /* { 
     content: '';
     position: absolute;
@@ -205,7 +212,6 @@ a.view-all:hover{
     padding-right: 23px;
     transition-duration: 0.5s;
 }  */
-
 
 a:visited {
     color: #db7a13;
@@ -498,7 +504,7 @@ form{
     display: flex;
     justify-content: space-between;
     margin-left: 50px;
-    margin-right: 50px;
+    margin-right: 55px;
 }
 
 .title-wrapper h2{
@@ -752,7 +758,7 @@ cite{
     display: flex;
     justify-content: space-between;
     margin-left: 50px;
-    margin-right: 50px;
+    margin-right: 55px;
     margin-bottom: 46px;
 }
 
